// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update identifiers migration adds TODO for TuiStatus type (cannot be auto-migrated to string literal): test.ts 1`] = `
{
  "0. Before": "
                import {type TuiStatus} from '@taiga-ui/legacy';

                @Component({
                    standalone: true,
                    template: '',
                })
                export class TestComponent {
                    public status: TuiStatus = 'error';
                }
            ",
  "1. After": "
// TODO: (Taiga UI migration) TuiStatus type has been removed. Replace with a plain string literal type: "default" | "error" | "info" | "neutral" | "primary" | "success" | "warning"
                import {type TuiStatus} from '@taiga-ui/legacy';

                @Component({
                    standalone: true,
                    template: '',
                })
                export class TestComponent {
                    public status: TuiStatus = 'error';
                }
            ",
}
`;

exports[`ng-update identifiers migration drops the Component suffix from kit input-range/action-bar: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {
                    TuiActionBarComponent,
                    TuiInputRangeComponent,
                } from '@taiga-ui/kit';

                @Component({
                    imports: [TuiActionBarComponent, TuiInputRangeComponent],
                })
                export class TestComponent {}
            ",
  "1. After": "
                import {Component} from '@angular/core';
                import { TuiInputRange, TuiActionBar } from '@taiga-ui/kit';

                @Component({
                    imports: [TuiActionBar, TuiInputRange],
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update identifiers migration drops the New suffix from input-date options identifiers: test.ts 1`] = `
{
  "0. Before": "
                import {
                    TUI_INPUT_DATE_DEFAULT_OPTIONS_NEW,
                    TUI_INPUT_DATE_OPTIONS_NEW,
                    type TuiInputDateOptionsNew,
                } from '@taiga-ui/kit';

                export class TestComponent {
                    protected readonly defaults = TUI_INPUT_DATE_DEFAULT_OPTIONS_NEW;
                    protected readonly token = TUI_INPUT_DATE_OPTIONS_NEW;
                    protected readonly options: TuiInputDateOptionsNew | null = null;
                }
            ",
  "1. After": "
                import { TuiInputDateOptions, TUI_INPUT_DATE_OPTIONS, TUI_INPUT_DATE_DEFAULT_OPTIONS } from '@taiga-ui/kit';

                export class TestComponent {
                    protected readonly defaults = TUI_INPUT_DATE_DEFAULT_OPTIONS;
                    protected readonly token = TUI_INPUT_DATE_OPTIONS;
                    protected readonly options: TuiInputDateOptions | null = null;
                }
            ",
}
`;

exports[`ng-update identifiers migration keeps tuiIsFlat usages in source code when migrating from @taiga-ui/kit: test.ts 1`] = `
{
  "0. Before": "
                import {tuiIsFlat} from '@taiga-ui/kit';

                export class TestComponent {
                    filter(items: readonly unknown[]): boolean {
                        return tuiIsFlat(items);
                    }
                }
            ",
  "1. After": "import { tuiIsFlat } from "@taiga-ui/cdk";

                                export class TestComponent {
                    filter(items: readonly unknown[]): boolean {
                        return tuiIsFlat(items);
                    }
                }
            ",
}
`;

exports[`ng-update identifiers migration migrates NG_EVENT_PLUGINS to provideTaiga: test.ts 1`] = `
{
  "0. Before": "
                import {NG_EVENT_PLUGINS} from '@taiga-ui/event-plugins';

                export const appConfig: ApplicationConfig = {
                    providers: [NG_EVENT_PLUGINS];
                };
            ",
  "1. After": "import { provideTaiga } from "@taiga-ui/core";

                                export const appConfig: ApplicationConfig = {
                    providers: [provideTaiga()];
                };
            ",
}
`;

exports[`ng-update identifiers migration migrates TUI_SANITIZER from legacy to TUI_EDITOR_SANITIZER in editor: test.ts 1`] = `
{
  "0. Before": "
                import {TUI_SANITIZER} from '@taiga-ui/legacy';
                import {NgDompurifySanitizer} from '@taiga-ui/dompurify';

                export const providers = [
                    {
                        provide: TUI_SANITIZER,
                        useClass: NgDompurifySanitizer,
                    },
                ];
            ",
  "1. After": "import { TUI_EDITOR_SANITIZER } from "@taiga-ui/editor";

                                import {NgDompurifySanitizer} from '@taiga-ui/dompurify';

                export const providers = [
                    {
                        provide: TUI_EDITOR_SANITIZER,
                        useClass: NgDompurifySanitizer,
                    },
                ];
            ",
}
`;

exports[`ng-update identifiers migration migrates TuiOptionNew to TuiOption: test.ts 1`] = `
{
  "0. Before": "
                import {TuiOptionNew} from '@taiga-ui/core';

                export class TestComponent {
                    protected readonly option = TuiOptionNew;
                }
            ",
  "1. After": "import { TuiOption } from "@taiga-ui/core";

                                export class TestComponent {
                    protected readonly option = TuiOption;
                }
            ",
}
`;

exports[`ng-update identifiers migration migrates identifiers to new packages: test.ts 1`] = `
{
  "0. Before": "
                import {TuiAutoColorPipe, TuiSurface} from '@taiga-ui/core';
                import {tuiPure} from '@taiga-ui/cdk';
                import {TuiCell} from '@taiga-ui/layout';

                export class TestComponent {
                    protected readonly surface = TuiSurface;
                    protected readonly cell = TuiCell;
                    protected readonly autoColor = TuiAutoColorPipe;
                    protected readonly pure = tuiPure;
                }
            ",
  "1. After": "import { tuiPure } from "@taiga-ui/legacy";
import { TuiAutoColorPipe } from "@taiga-ui/kit";

                import { TuiCell } from '@taiga-ui/core';
                import { TuiSurface } from '@taiga-ui/layout';

                export class TestComponent {
                    protected readonly surface = TuiSurface;
                    protected readonly cell = TuiCell;
                    protected readonly autoColor = TuiAutoColorPipe;
                    protected readonly pure = tuiPure;
                }
            ",
}
`;

exports[`ng-update identifiers migration migrates provideEventPlugins to provideTaiga: test.ts 1`] = `
{
  "0. Before": "
                import {provideEventPlugins} from '@taiga-ui/event-plugins';

                export const appConfig: ApplicationConfig = {
                    providers: [provideEventPlugins()];
                };
            ",
  "1. After": "import { provideTaiga } from "@taiga-ui/core";

                                export const appConfig: ApplicationConfig = {
                    providers: [provideTaiga()];
                };
            ",
}
`;

exports[`ng-update identifiers migration migrates sheet identifiers from legacy to addon-mobile: test.ts 1`] = `
{
  "0. Before": "
                import {
                    TuiSheetModule,
                    TuiSheetDialogOptions,
                    TuiSheetService,
                } from '@taiga-ui/legacy';

                export class TestComponent {
                    protected readonly moduleRef = TuiSheetModule;
                    protected readonly options: TuiSheetDialogOptions = {};
                    protected readonly service = TuiSheetService;
                }
            ",
  "1. After": "import { TuiSheetDialog, TuiSheetDialogOptions, TuiSheetDialogService } from "@taiga-ui/addon-mobile";

                export class TestComponent {
                    protected readonly moduleRef = TuiSheetDialog;
                    protected readonly options: TuiSheetDialogOptions = {};
                    protected readonly service = TuiSheetDialogService;
                }
            ",
}
`;

exports[`ng-update identifiers migration moves TUI_CALENDAR_DATE_STREAM from @taiga-ui/kit to @taiga-ui/addon-mobile: test.ts 1`] = `
{
  "0. Before": "
                import {TUI_CALENDAR_DATE_STREAM} from '@taiga-ui/kit';

                export class TestComponent {
                    protected readonly stream = TUI_CALENDAR_DATE_STREAM;
                }
            ",
  "1. After": "import { TUI_CALENDAR_DATE_STREAM } from "@taiga-ui/addon-mobile";

                                export class TestComponent {
                    protected readonly stream = TUI_CALENDAR_DATE_STREAM;
                }
            ",
}
`;

exports[`ng-update identifiers migration moves TuiFlagPipe from core to kit: test.ts 1`] = `
{
  "0. Before": "
                import {TuiFlagPipe} from '@taiga-ui/core';

                export class TestComponent {
                    protected readonly flag = TuiFlagPipe;
                }
            ",
  "1. After": "import { TuiFlagPipe } from "@taiga-ui/kit";

                                export class TestComponent {
                    protected readonly flag = TuiFlagPipe;
                }
            ",
}
`;

exports[`ng-update identifiers migration moves TuiThemeColorService and TUI_THEME_COLOR from cdk to addon-mobile (#13869): test.ts 1`] = `
{
  "0. Before": "
                import {inject} from '@angular/core';
                import {TUI_THEME_COLOR, TuiThemeColorService} from '@taiga-ui/cdk';

                export class TestComponent {
                    protected readonly token = TUI_THEME_COLOR;
                    protected readonly theme = inject(TuiThemeColorService);
                }
            ",
  "1. After": "import { TuiThemeColorService, TUI_THEME_COLOR } from "@taiga-ui/addon-mobile";

                import {inject} from '@angular/core';

                export class TestComponent {
                    protected readonly token = TUI_THEME_COLOR;
                    protected readonly theme = inject(TuiThemeColorService);
                }
            ",
}
`;

exports[`ng-update identifiers migration moves TuiTimeMode type from cdk to MaskitoTimeMode in maskito kit: test.ts 1`] = `
{
  "0. Before": "
                import {type TuiTimeMode} from '@taiga-ui/cdk';

                export type Mode = TuiTimeMode;
            ",
  "1. After": "import { MaskitoTimeMode } from "@maskito/kit";

                                export type Mode = MaskitoTimeMode;
            ",
}
`;

exports[`ng-update identifiers migration moves legacy TuiInputRangeComponent to kit TuiInputRange: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiInputRangeComponent} from '@taiga-ui/legacy';

                @Component({imports: [TuiInputRangeComponent]})
                export class TestComponent {}
            ",
  "1. After": "import { TuiInputRange } from "@taiga-ui/kit";

                import {Component} from '@angular/core';

                @Component({imports: [TuiInputRange]})
                export class TestComponent {}
            ",
}
`;

exports[`ng-update identifiers migration moves tuiCellOptionsProvider from layout to core: test.ts 1`] = `
{
  "0. Before": "
                import {tuiCellOptionsProvider} from '@taiga-ui/layout';

                export const providers = [tuiCellOptionsProvider({size: 'm'})];
            ",
  "1. After": "import { tuiCellOptionsProvider } from "@taiga-ui/core";

                                export const providers = [tuiCellOptionsProvider({size: 'm'})];
            ",
}
`;

exports[`ng-update identifiers migration moves tuiIsFlat from @taiga-ui/kit to @taiga-ui/cdk: test.ts 1`] = `
{
  "0. Before": "import {tuiIsFlat} from '@taiga-ui/kit';",
  "1. After": "import { tuiIsFlat } from "@taiga-ui/cdk";
",
}
`;

exports[`ng-update identifiers migration preserves attributes when replacing tuiButtonClose with tuiButtonX: test.html 1`] = `
{
  "0. Before": "<button tuiButtonClose appearance="primary" size="m"></button>",
  "1. After": "<button tuiButtonX appearance="primary" size="m"></button>",
}
`;

exports[`ng-update identifiers migration renames ResizeObserverService to WaResizeObserverService: test.ts 1`] = `
{
  "0. Before": "
                import {ResizeObserverService} from '@ng-web-apis/resize-observer';

                export class TestComponent {
                    protected readonly observer = ResizeObserverService;
                }
            ",
  "1. After": "import { WaResizeObserverService } from "@ng-web-apis/resize-observer";

                                export class TestComponent {
                    protected readonly observer = WaResizeObserverService;
                }
            ",
}
`;

exports[`ng-update identifiers migration renames TuiInputCVC/TuiInputExpire to their *Directive names (#13869): test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiInputCVC, TuiInputExpire} from '@taiga-ui/addon-commerce';

                @Component({imports: [TuiInputCVC, TuiInputExpire]})
                export class TestComponent {}
            ",
  "1. After": "
                import {Component} from '@angular/core';
                import { TuiInputCVCDirective, TuiInputExpireDirective } from '@taiga-ui/addon-commerce';

                @Component({imports: [TuiInputCVCDirective, TuiInputExpireDirective]})
                export class TestComponent {}
            ",
}
`;

exports[`ng-update identifiers migration renames TuiWithQuantumValueTransformer: test.ts 1`] = `
{
  "0. Before": "
                import {TuiWithQuantumValueTransformer} from '@taiga-ui/kit';

                export class TestComponent {
                    protected readonly transformer = TuiWithQuantumValueTransformer;
                }
            ",
  "1. After": "import { TuiQuantumValueTransformer } from "@taiga-ui/kit";

                                export class TestComponent {
                    protected readonly transformer = TuiQuantumValueTransformer;
                }
            ",
}
`;

exports[`ng-update identifiers migration renames alert options to notification options: test.ts 1`] = `
{
  "0. Before": "
                import {TUI_ALERT_OPTIONS, type TuiAlertOptions} from '@taiga-ui/core';

                export class TestComponent {
                    protected readonly token = TUI_ALERT_OPTIONS;
                    protected readonly options: TuiAlertOptions | null = null;
                }
            ",
  "1. After": "
                import { TuiNotificationOptions, TUI_NOTIFICATION_OPTIONS } from '@taiga-ui/core';

                export class TestComponent {
                    protected readonly token = TUI_NOTIFICATION_OPTIONS;
                    protected readonly options: TuiNotificationOptions | null = null;
                }
            ",
}
`;

exports[`ng-update identifiers migration renames kit input-password options to password options: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {
                    TUI_INPUT_PASSWORD_OPTIONS,
                    tuiInputPasswordOptionsProvider,
                    type TuiInputPasswordOptions,
                } from '@taiga-ui/kit';

                @Component({providers: [tuiInputPasswordOptionsProvider({})]})
                export class TestComponent {
                    protected readonly token = TUI_INPUT_PASSWORD_OPTIONS;
                    protected readonly options: TuiInputPasswordOptions | null = null;
                }
            ",
  "1. After": "
                import {Component} from '@angular/core';
                import { TuiPasswordOptions, TUI_PASSWORD_OPTIONS, tuiPasswordOptionsProvider } from '@taiga-ui/kit';

                @Component({providers: [tuiPasswordOptionsProvider({})]})
                export class TestComponent {
                    protected readonly token = TUI_PASSWORD_OPTIONS;
                    protected readonly options: TuiPasswordOptions | null = null;
                }
            ",
}
`;

exports[`ng-update identifiers migration renames legacy input-password options to kit password options: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {
                    TUI_INPUT_PASSWORD_OPTIONS,
                    tuiInputPasswordOptionsProvider,
                    type TuiInputPasswordOptions,
                } from '@taiga-ui/legacy';

                @Component({providers: [tuiInputPasswordOptionsProvider({})]})
                export class TestComponent {
                    protected readonly token = TUI_INPUT_PASSWORD_OPTIONS;
                    protected readonly options: TuiInputPasswordOptions | null = null;
                }
            ",
  "1. After": "import { TuiPasswordOptions, TUI_PASSWORD_OPTIONS, tuiPasswordOptionsProvider } from "@taiga-ui/kit";

                import {Component} from '@angular/core';

                @Component({providers: [tuiPasswordOptionsProvider({})]})
                export class TestComponent {
                    protected readonly token = TUI_PASSWORD_OPTIONS;
                    protected readonly options: TuiPasswordOptions | null = null;
                }
            ",
}
`;

exports[`ng-update identifiers migration replaces tuiButtonClose with tuiButtonX: test.html 1`] = `
{
  "0. Before": "<button tuiButtonClose></button>",
  "1. After": "<button tuiButtonX></button>",
}
`;
